get sensor data by id
